# EDA-Trabalho-Final

./: CMakeLists.txt  main.c
lib/: TA.c  TA.h  TABM.c  TABM.h  THASH.c  THASH.h  THEAP.c  THEAP.h  gerar10k.c  gerar10k.h  testehash.c  testehash.h
lib/hdr/: TABM.h  THASH.h  THEAP.h  gerar10k.h  testeHeap.h  testeTABM.h  testehash.h
lib/src/: TA.c  TABM.c  THASH.c  THEAP.c  gerar10k.c  testeHeap.c  testeTABM.c  testehash.c
